<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/actBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/history"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/gold"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/uplb_logo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/history1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text"
            android:gravity="start"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/copeland"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/history2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text"
            android:gravity="start"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:src="@drawable/baker_hall"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/history3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text"
            android:gravity="start"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:src="@drawable/uplb_front"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/history4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text"
            android:gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/brought"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text"
            android:gravity="center"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ec_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/frat"
            android:textColor="@color/gold"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>