<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/actBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/calendar2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/gold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/calendar2_intro"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text"
            android:gravity="start"/>

        <ImageView
            android:id="@+id/calendar1"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/uplb_academic_calendar1"
            android:scaleType="centerInside"/>

        <ImageView
            android:id="@+id/calendar2"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/uplb_academic_calendar2"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/brought"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text"
            android:gravity="center"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ec_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/frat"
            android:textColor="@color/gold"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>